<resources>
    <string name="app_name">EcommerceShopApp</string>
    <string name="login_text">Login</string>
    <string name="redirect_to_register"><u>Dont Have An Account? Register Here</u></string>
    <string name="login_txt">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account_text">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email id</string>
    <string name="user_password">Password</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="terms_conditions"><![CDATA[I agree to Terms & Conditions applied]]></string>
    <string name="register_txt">Register</string>
    <string name="login_msg"><u>Already have an Account? Login Here</u></string>
</resources>