<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.example.ecommerceshopapp.utils.MSPTextView
            android:id="@+id/createaccount_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_text"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </androidx.appcompat.widget.Toolbar>

    <com.example.ecommerceshopapp.utils.MSPEditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:hint="@string/first_name"
        android:minHeight="50dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <requestFocus/>

    </com.example.ecommerceshopapp.utils.MSPEditText>

    <com.example.ecommerceshopapp.utils.MSPEditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        android:hint="@string/last_name"
        android:minHeight="50dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.example.ecommerceshopapp.utils.MSPEditText
        android:id="@+id/user_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/last_name"
        android:hint="@string/email_id"
        android:minHeight="50dp"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.example.ecommerceshopapp.utils.MSPEditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/user_email_id"
        android:hint="@string/user_password"
        android:minHeight="50dp"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <com.example.ecommerceshopapp.utils.MSPEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/user_password"
        android:hint="@string/user_confirm_password"
        android:minHeight="50dp"
        android:textColorHint="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_conditions"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:minHeight="50dp"
        android:textColor="@color/black"
        />

    <com.example.ecommerceshopapp.utils.MSPButton
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/register_txt"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_box" />

    <com.example.ecommerceshopapp.utils.MSPTextView
        android:id="@+id/login_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:onClick="login_here"
        android:text="@string/login_msg"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>